[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "utils"
authors = [{ name = "OneTells", email = "OneTells@ya.ru" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "SQLAlchemy", "setuptools", "pydantic", "asyncpg", "loguru", "requests", "aiohttp", "uvloop"
]

dynamic = ["version"]

[project.urls]
Repository = "https://github.com/OneTells/core"

[tool.setuptools.dynamic]
version = { attr = "core.__version__" }
