[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "utils"
description = "Ядро для проектов"
authors = [{ name = "OneTells", email = "OneTells@ya.ru" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "SQLAlchemy", "setuptools", "pydantic", "asyncpg", "loguru", "requests", "aiohttp"
]

dynamic = ["version"]

[project.urls]
Repository = "https://github.com/OneTells/utils"

[tool.setuptools.dynamic]
version = { attr = "utils.__version__" }
